--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
     <base href="./" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
+    <script src="https://unpkg.com/@webcomponents/webcomponentsjs@2.1.3/custom-elements-es5-adapter.js"></script>
     <script src="./custom-button-element.js"></script>
   </head>
   <body>
