--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,12 @@
     <meta charset="utf-8" />
     <title>ElementsDemo</title>
     <base href="./" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=Edge,Chrome=1" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, user-scalable=yes"
+    />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
     <script src="https://unpkg.com/@webcomponents/webcomponentsjs@2.1.3/custom-elements-es5-adapter.js"></script>
     <script src="./custom-button-element.js"></script>
@@ -18,5 +23,7 @@
       // });
       // setTimeout(() => (button.label = "Second Value"), 3000);
     </script>
+    <script src="https://cdn.polyfill.io/v2/polyfill.min.js?features=console.*,Intl.~locale.en&gated=1"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/core-js/2.4.0/shim.min.js"></script>
   </body>
 </html>
